erDiagram
    departments ||--o{ profiles : has
    departments {
        uuid id PK
        varchar name UK
        varchar name_en
        timestamptz created_at
    }

    hero_titles ||--o{ profiles : assigned_to
    hero_titles {
        uuid id PK
        varchar name UK
        varchar color
        timestamptz created_at
    }

    profiles ||--o{ kudos : sends
    profiles ||--o{ kudos : receives
    profiles ||--o{ kudo_likes : likes
    profiles ||--o{ secret_boxes : owns
    profiles ||--o{ gifts : receives_gift
    profiles {
        uuid id PK
        varchar name
        varchar email UK
        varchar avatar_url
        uuid department_id FK
        uuid hero_title_id FK
        int star_count
        varchar role
        timestamptz created_at
        timestamptz updated_at
    }

    categories ||--o{ kudos : categorizes
    categories {
        uuid id PK
        varchar name UK
        varchar name_en
        timestamptz created_at
    }

    kudos ||--|{ kudo_media : has_media
    kudos ||--o{ kudo_hashtags : tagged_with
    kudos ||--o{ kudo_likes : liked_by
    kudos {
        uuid id PK
        uuid sender_id FK
        uuid recipient_id FK
        text content
        uuid category_id FK
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    kudo_media {
        uuid id PK
        uuid kudo_id FK
        varchar url
        varchar type
        varchar thumbnail_url
        int sort_order
        timestamptz created_at
    }

    hashtags ||--o{ kudo_hashtags : used_in
    hashtags {
        uuid id PK
        varchar name UK
        timestamptz created_at
    }

    kudo_hashtags {
        uuid id PK
        uuid kudo_id FK
        uuid hashtag_id FK
    }

    kudo_likes {
        uuid id PK
        uuid kudo_id FK
        uuid user_id FK
        timestamptz created_at
    }

    secret_boxes {
        uuid id PK
        uuid user_id FK
        timestamptz opened_at
        text reward_description
        timestamptz created_at
    }

    gifts {
        uuid id PK
        uuid recipient_id FK
        varchar description
        timestamptz created_at
    }

    award_categories ||--|{ award_prizes : has_prizes
    award_categories {
        uuid id PK
        varchar name
        varchar slug UK
        text description_vi
        text description_en
        varchar thumbnail_path
        varchar quantity
        varchar unit_vi
        varchar unit_en
        int sort_order
        timestamptz created_at
    }

    award_prizes {
        uuid id PK
        uuid award_category_id FK
        varchar value
        varchar note_vi
        varchar note_en
        int sort_order
    }
